--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
 </head>
 <body>
     <!-- Header start -->
-    <header class="nav">
-        <div class="nav-wrap">
-            <img src="images/icons/logo.png" alt="">
-            <span class="nav-span">Idea</span>
-        </div>
-        <div class="nav-info">
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Works</a>
-            <img src="images/icons/profile.png" alt="">
-        </div>
+    <header >
+        <nav class="nav-header">
+            <span class="nav-wrap">
+                <img src="images/icons/logo.png" alt="">
+                <span class="nav-span">Idea</span>
+            </span>
+            <span class="nav-info">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Works</a>
+                <img src="images/icons/profile.png" alt="">
+            </span>
+        </nav>
     </header>
    <!--header end-->
     <main>
